--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,25 @@
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@font-face {
+  font-family: "Press Start 2P Bold";
+  font-weight: 700;
+  font-display: swap;
+  src: url(/font/BalsamiqSans-Bold.ttf) format('truetype');
+}
+
+@font-face {
+  font-family: "Press Start 2P Regular";
+  font-weight: 400;
+  font-display: swap;
+  src: url(/font/BalsamiqSans-Regular.ttf) format('truetype');
+}
+
+
+body {
+  font-family: "Press Start 2P Regular", sans-serif;
+}
+
+
